--- a/pom.xml
+++ b/pom.xml
@@ -10,10 +10,10 @@
   <packaging>war</packaging>
 
   <name>gamecompletionarchive Maven Webapp</name>
-  <!-- FIXME change it to the project's website -->
   <url>http://www.gamecompletionarchive.com</url>
 
   <properties>
+    <hibernate-version>5.4.4.Final</hibernate-version>
     <maven.compiler.release>11</maven.compiler.release>
     <junit.version>4.12</junit.version>
     <junit-vintage-version>4.12.0</junit-vintage-version>
@@ -84,15 +84,21 @@
     <dependency>
       <groupId>org.hibernate</groupId>
       <artifactId>hibernate-core</artifactId>
-      <version>5.4.4.Final</version>
+      <version>${hibernate-version}</version>
     </dependency>
     <!-- c3p0 - used to handle connection pooling with hibernate -->
     <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-c3p0 -->
     <dependency>
       <groupId>org.hibernate</groupId>
       <artifactId>hibernate-c3p0</artifactId>
-      <version>5.4.4.Final</version>
+      <version>${hibernate-version}</version>
     </dependency>
+      <dependency>
+          <groupId>org.junit.jupiter</groupId>
+          <artifactId>junit-jupiter-api</artifactId>
+          <version>5.0.0</version>
+          <scope>compile</scope>
+      </dependency>
   </dependencies>
   <build>
     <finalName>GameCompletionArchive</finalName>
